dockerize deamons with docker compose